--- a/Lorensjon/src/todo.txt
+++ b/Lorensjon/src/todo.txt
@@ -1,9 +1,9 @@
-!§!Lorensjon todolist!§!
+!ï¿½!Lorensjon todolist!ï¿½!
 Bevster 2012 ;*
+==============================
 
 
-
-// Ikke færdig ennadaada \\
+// Ikke fï¿½rdig ennadaada \\
 
 
 *Add Nyheter fra forskellige skolene
@@ -19,10 +19,10 @@ Bevster 2012 ;*
  -Kontaktopplysninger
 
 *Fix
- -Bug: Om internettet skulle komme på igjen etter en tidligere sjekk.  
+ -Bug: Om internettet skulle komme pï¿½ igjen etter en tidligere sjekk.  
  
 *Add flere skoler
- -Raelingen // Nailed så hardt
+ -Raelingen // Nailed sï¿½ hardt
  -Mailand //Usikkerhet, skolearena
  -Strommen // Nailed enda hardere enn Raelingen!
  -Skedsmo //Skolearena
@@ -30,7 +30,7 @@ Bevster 2012 ;*
 
 
 
-// Færdig med deggg \\
+// Fï¿½rdig med deggg \\
 
 
 *Fix Ukeplanstorelse
