--- a/Lorensjon/res/values/strings.xml
+++ b/Lorensjon/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="chk_skole">Finn skolen din!</string>
     <string name="chk_klasse">Finn klassen din!</string>
     <string name="knapp_lagre">Lagre</string>
-    <string name="dash_nyheter">Nyheter</string>
+    <string name="dash_nyheter">Bruksanvisning</string>
     <string name="dash_ukeplan">Ukeplan</string>
     <string name="dash_om">Om</string>
     <string name="dash_instillinger">Innstillinger</string>
